# TaskWaterApp

./: .gitignore  deployment.yaml  main.py  mongodb-deployment.yaml  pyproject.toml
app/: models.py  routes.py  schemas.py  websocket.py
bot/handlers/: __init__.py  commands.py  messages.py
bot/tools/: schedule_run.py
settings/: config.py  settings.ini
tests/: test_api.py  test_websocket.py
